# CG-2020

./: .gitignore  README.md
lab01/: .gitignore  CMakeLists.txt  main.cpp  ppm.cpp  ppm.h  test.ppm
lab02/: lab02.html
lab03/: hw3.md
lab04/: .gitignore  CMakeLists.txt  Readme.md  main.cpp
lab05/: hw5.md
lab06/: hw6.md
lab07/: CMakeLists.txt  main.cpp  new-main.cpp
lab08/: .gitignore  CMakeLists.txt  Readme.md  main.cpp
